SynProdGITV1/force-app/main/default/objects/Sales_Org_Data__c/Sales_Org_Data__c.object-meta.xml
<CustomObject>
    <label>Sales Org Data</label>
    <nameField>
        <label>Sales Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Org Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>