SynProdGITV1/force-app/main/default/objects/Sales_Org_Data__c/fields/InActive__c.field-meta.xml
<CustomField>
    <fullName>InActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InActive</label>
    <type>Checkbox</type>
</CustomField>