SynProdGITV1/force-app/main/default/objects/Sales_Org_Data__c/fields/Left_Footer_Information__c.field-meta.xml
<CustomField>
    <fullName>Left_Footer_Information__c</fullName>
    <description>SS2-T192 - Created for Proforma Order Generation on Order</description>
    <label>Left Footer Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>