SynProdGITV1/force-app/main/default/objects/Sales_Org_Data__c/fields/Sales_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sales Org ID</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>