SynProdGITV1/force-app/main/default/objects/Sales_Org_Data__c/fields/VAT_ID__c.field-meta.xml
<CustomField>
    <fullName>VAT_ID__c</fullName>
    <label>VAT ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>