SynProdGITV1/force-app/main/default/objects/Sales_Org_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org_ID__c</columns>
    <columns>VAT_ID__c</columns>
    <columns>InActive__c</columns>
    <columns>Company_Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>